# SummitxSolidworksURDF

summit_x_nowheel_test_export/: CMakeLists.txt  package.xml
summit_x_nowheel_test_export/config/: joint_names_summit_x_nowheel_test_export.yaml
summit_x_nowheel_test_export/launch/: display.launch  gazebo.launch
summit_x_nowheel_test_export/meshes/: LB_suspension_link.STL  LF_suspension_link.STL  RB_suspension_link.STL  RF_suspension_link.STL  chassis.STL
summit_x_nowheel_test_export/urdf/: summit_x_nowheel_test_export.urdf
summitx_1/: chassis.SLDPRT  rim_remake.SLDPRT  summit_X.SLDASM  suspension_link.SLDPRT  ~$chassis.SLDPRT
summitx_1/reverse-engineering/: mecawheel_a_rim.SLDPRT
test_project/: Assem1.SLDASM  bracket.SLDPRT  roller.SLDPRT
test_project/Assem1/: package.xml
test_project/Assem1/config/: joint_names_Assem1.yaml
test_project/Assem1/launch/: display.launch  gazebo.launch
test_project/Assem1/meshes/: base_link.STL  roller.STL
test_project/Assem1/urdf/: Assem1.urdf
test_project/roller/: manifest.xml
test_project/roller/meshes/: roller.STL
test_project/roller/urdf/: roller.urdf
