<package>
  <name>summit_x_nowheel_test_export</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for summit_x_nowheel_test_export</p>
    <p>This package contains configuration data, 3D models and launch files
for summit_x_nowheel_test_export robot</p>
  </description>
  <author>me</author>
  <maintainer email="me2email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>gazebo</run_depend>
  <export>
    <architecture_independent />
  </export>
</package>